name:               aex
version:            0.1.0.0
synopsis:           Assembly Expression Language
description:        Just a toy project to learn Haskell.
homepage:           http://github.com/sharpjs/aex#readme
license:            GPL-3
license-file:       LICENSE
author:             Jeff Sharp
maintainer:         jeff.sharp@git
copyright:          Copyright (C) 2015 Jeff Sharp
category:           Compiler
build-type:         Simple
cabal-version:      >= 1.10

executable aex
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Aex.Asm
                      , Aex.AST
                      , Aex.Scope
                      , Aex.Symbol
                      , Aex.Targets.Mcf5307
                      , Aex.Types
                      , Aex.Util
  build-depends:        base >= 4.7 && < 5
                      , bytestring
                      , hashable
                      , hashtables
                      , mtl
  default-language:     Haskell2010

