name:               aex
version:            0.1.0.0
synopsis:           Assembly Expression Language
description:        Just a toy project to learn Haskell.
homepage:           http://github.com/sharpjs/aex#readme
license:            GPL-3
license-file:       LICENSE
author:             Jeff Sharp
maintainer:         jeff.sharp@git
copyright:          Copyright (C) 2015 Jeff Sharp
category:           Compiler
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:       src
  exposed-modules:      Aex.Analysis
                      , Aex.Asm
                      , Aex.AST
                      , Aex.Message
                      , Aex.Pos
                      , Aex.Scope
                      , Aex.Symbol
                      , Aex.Targets.Mcf5307
                      , Aex.Types
                      , Aex.Util
                      , Aex.Util.BitSet
  build-depends:        base >= 4.7 && < 5
                      , bytestring
                      , containers
                      , hashable
                      , hashtables
                      , mtl
  default-language:     Haskell2010
  default-extensions:   MultiWayIf
                      , OverloadedStrings

executable aex
  hs-source-dirs:       app
  main-is:              Main.hs
  build-depends:        base, aex
  default-language:     Haskell2010

test-suite aex-test
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        Aex.UtilSpec
  build-depends:        base
                      , aex
                      , hspec
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  type:                 exitcode-stdio-1.0

